--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,58 @@
-body {
-  background-color: black;
-  color: wheat;
+ul {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
 }
+.card {
+  width: auto;
+  margin: 15px;
+}
+button > .spinner.is-hidden {
+  display: none;
+}
+.btn {
+  border: none;
+  border-radius: 5px;
+  width: 100px;
+  height: 50px;
+  background-color: orange;
+}
+input {
+  width: 400px;
+  height: 48px;
+  border-radius: 5px;
+}
+form {
+  margin-left: 50px;
+  margin-top: 100px;
+}
+.btn-loading {
+  display: none;
+  margin-left: 50px;
+  width: 200px;
+  background-color: yellow;
+  border: 1px solid black;
+}
+.basicLightbox {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.8);
+  transition: opacity 0.4s linear;
+  z-index: 1000;
+  will-change: opacity;
+}
+.photo-frame {
+  overflow: hidden;
+  width: 350px;
+  height: 350px;
+}
+.btn-loading.is-open {
+  display: block;
+}
+
