--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,58 +1,53 @@
+body {
+  background-image: url(https://ichip.ru/images/cache/2019/6/1/fit_930_519_false_crop_1200_675_0_0_q90_306892_109e6716bb.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: peru;
+}
 ul {
   list-style: none;
+}
+.gallery {
   display: flex;
   flex-wrap: wrap;
 }
-.card {
-  width: auto;
-  margin: 15px;
-}
-button > .spinner.is-hidden {
-  display: none;
-}
-.btn {
-  border: none;
-  border-radius: 5px;
-  width: 100px;
-  height: 50px;
-  background-color: orange;
-}
-input {
-  width: 400px;
-  height: 48px;
-  border-radius: 5px;
-}
-form {
-  margin-left: 50px;
-  margin-top: 100px;
-}
-.btn-loading {
-  display: none;
-  margin-left: 50px;
-  width: 200px;
-  background-color: yellow;
-  border: 1px solid black;
-}
-.basicLightbox {
-  position: fixed;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background: rgba(0, 0, 0, 0.8);
-  transition: opacity 0.4s linear;
-  z-index: 1000;
-  will-change: opacity;
-}
-.photo-frame {
-  overflow: hidden;
-  width: 350px;
-  height: 350px;
-}
-.btn-loading.is-open {
+
+.loadmore-button {
+  padding: 10px, 10px;
+  font-size: 25px;
   display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
+.hidden {
+  display: none;
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+li {
+  width: 350px;
+  margin: 20px;
+  background-color: teal;
+  border-radius: 10%;
+}
+.search-form {
+  width: 300px;
+}
+.photo-box{
+  height: 200px;
+  overflow: hidden;
+}
+.stats{
+  padding: 15px;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-evenly;
+}
+form{
+  margin-left: auto;
+  margin-right: auto;
+}
