--- a/src/template/template.hbs
+++ b/src/template/template.hbs
@@ -1,45 +1,30 @@
 {{#each this}}
+<li>
   <div class="photo-card">
-    <img
-      src="{{webformatURL}}"
-      alt="{{tags}}"
-      data-source="{{largeImageURL}}"
-      data-index="{{@index}}"
-      width="{{webformatWidth}}"
-    />
+    <div class="photo-box">
+      <img width="{{webformatWidth}}" src="{{webformatURL}}" data-source="{{largeImageURL}}" data-index="{{@index}}"
+        alt="{{tags}}" />
+    </div>
 
     <div class="stats">
       <p class="stats-item">
-        <i class="material-icons">
-          thumb_up
-        </i>
+        <i class="material-icons">thumb_up</i>
         {{likes}}
       </p>
       <p class="stats-item">
-        <i class="material-icons">
-          visibility
-        </i>
+        <i class="material-icons">visibility</i>
         {{views}}
       </p>
       <p class="stats-item">
-        <i class="material-icons">
-          comment
-        </i>
+        <i class="material-icons">comment</i>
         {{comments}}
       </p>
       <p class="stats-item">
-        <i class="material-icons">
-          cloud_download
-        </i>
+        <i class="material-icons">cloud_download</i>
         {{downloads}}
       </p>
     </div>
   </div>
+</li>
 {{/each}}
 
-{{! webformatURL - ссылка на маленькое изображение для списка карточек
-largeImageURL - ссылка на большое изображение (смотри пункт 'дополнительно')
-likes - количество лайков
-views - количество просмотров
-comments - количество комментариев
-downloads - количество загрузок }}
